Update tests: add to cart + edit product
Update tests: add to cart + edit product

--- a/.gitignore
+++ b/.gitignore
@@ -21,3 +21,16 @@
 
 # virtual machine crash logs, see http://www.java.com/en/download/help/error_hotspot.xml
 hs_err_pid*
+
+test-output/
+test-output/Default suite/Default test.html
+test-output/Default suite/Default test.xml
+test-output/emailable-report.html
+test-output/IdoSport.html
+test-output/index.html
+test-output/old/Default suite/classes.html
+test-output/old/Default suite/methods-alphabetical.html
+test-output/old/Default suite/methods.html
+test-output/old/Default suite/toc.html
+test-output/old/index.html
+test-output/testng-results.xml
