Commit ignore file
commit ignore file

--- a/.gitignore
+++ b/.gitignore
@@ -34,3 +34,13 @@ test-output/old/Default suite/methods.html
 test-output/old/Default suite/toc.html
 test-output/old/index.html
 test-output/testng-results.xml
+test-output/Default suite/Default test.html
+test-output/Default suite/Default test.html
+test-output/Default suite/Default test.xml
+test-output/emailable-report.html
+test-output/IdoSport.html
+test-output/index.html
+test-output/junitreports/TEST-tests.SanityBuyProduct.xml
+test-output/old/Default suite/methods-alphabetical.html
+test-output/old/Default suite/methods.html
+test-output/testng-results.xml
